@@ -8,6 +8,8 @@ cod-tools (unreleased)
     - COD::CIF::Data::AtomList:
       - updated the atom property extraction logic to determine atom
         oxidation states from atom chemical types and atom names.
+      - the 'exclude_hydrogens' option to the atom_array_from_cif()
+        subroutine that excludes hydrogen atoms.
     - cif_sort_atoms:
       - the '--ascending-numerical', '--descending-numerical',
         '--ascending-lexical', '--descending-lexical' options.
